[tool.poetry]
name = "repl_python3_beta_cubybot"
version = "0.1.0"
description = ""
authors = ["robi0t <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.18.0"
youtube_dl = "^2021.6.6"
aiohttp = "^3.7.4"
async-timeout = "^3.0.1"
discord = "^1.7.3"
gTTS = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
